@@ -115,12 +115,6 @@ return [
 			'jquery.tablesorter',
 			'jquery.textSelection',
 			'mediawiki.api',
-			'mediawiki.api.category',
-			'mediawiki.api.messages',
-			'mediawiki.api.options',
-			'mediawiki.api.parse',
-			'mediawiki.api.upload',
-			'mediawiki.api.watch',
 			'mediawiki.ForeignApi.core',
 			'mediawiki.jqueryMsg',
 			'mediawiki.messagePoster',
